erDiagram
    USER {
        int id PK
        string name
        string email_address UK "normalisiert, eindeutig"
        string password_digest
        int role "enum: benutzer | moderator | administrator"
        string unconfirmed_email "neue E-Mail bis zur Bestätigung"
        datetime locked_at "Konto gesperrt durch Admin"
        datetime created_at
        datetime updated_at
    }

    SESSION {
        int id PK
        int user_id FK
        string ip_address
        string user_agent
        datetime created_at
        datetime updated_at
    }

    CATEGORY {
        int id PK
        string name
        string name_normalized UK "klein, Leerzeichen bereinigt"
        datetime created_at
        datetime updated_at
    }

    RETAIL_CHAIN {
        int id PK
        string name "Migros, Coop, Aldi, Lidl ..."
        string name_normalized UK "klein, Leerzeichen bereinigt"
        datetime created_at
        datetime updated_at
    }

    PRODUCT {
        int id PK
        int category_id FK
        int retail_chain_id FK
        int created_by_id FK "User, der das Produkt erfasst hat; null nach Kontolöschung"
        string name
        string brand
        string name_normalized "UK zusammen mit brand_normalized + retail_chain_id"
        string brand_normalized
        text description
        int ratings_count "Aggregat"
        int ratings_sum "Aggregat, Durchschnitt = sum / count"
        datetime locked_at "gesperrt durch Moderator"
        int lock_version "optimistisches Locking"
        datetime created_at
        datetime updated_at
    }

    RATING {
        int id PK
        int user_id FK "UK zusammen mit product_id"
        int product_id FK
        int stars "1..5"
        text comment "optional"
        int status "enum: aktiv | gesperrt"
        datetime created_at
        datetime updated_at
    }

    REPORT {
        int id PK
        int rating_id FK "UK zusammen mit reporter_id"
        int reporter_id FK "meldender User"
        int moderator_id FK "übernehmender Moderator, null bis zur Übernahme"
        int reason "enum: beleidigend | spam | kein_bezug | anderes, Pflichtangabe"
        int status "enum: offen | in_bearbeitung | freigegeben | gesperrt"
        datetime claimed_at "pessimistische Sperre"
        datetime decided_at
        datetime created_at
        datetime updated_at
    }

    VERSION {
        int id PK
        string item_type "Product | Rating | Report"
        bigint item_id
        string event "create | update | destroy"
        string whodunnit "User-ID als Text, leer bei Änderungen ohne Anmeldung"
        text object "Zustand vor der Änderung"
        text object_changes "geänderte Felder"
        datetime created_at
    }

    USER ||--o{ SESSION : "meldet sich an"
    USER |o--o{ PRODUCT : "erfasst"
    USER ||--o{ RATING : "bewertet"
    PRODUCT ||--o{ RATING : "erhält"
    CATEGORY ||--o{ PRODUCT : "ordnet ein"
    RETAIL_CHAIN ||--o{ PRODUCT : "verkauft"
    RATING ||--o{ REPORT : "wird gemeldet"
    USER ||--o{ REPORT : "meldet"
    USER |o--o{ REPORT : "moderiert"
    USER |o--o{ VERSION : "verursacht"
